# cse314hw2

./: .env.example  .gitignore  README.md  pyproject.toml
assignments/: mkdocs.yml
assignments/docs/: alcohol.md  apple.md  school.md
assignments/hw2/: AlcoholCallbacks.py  AppleCallbacks.py  SchoolCallbacks.py
assignments/site/apple/: index.html
dashboards/: app.py
hw2docs/docs/: index.md
hw2docs/site/alcohol/: index.html
hw2docs/site/school/: index.html
site/: 404.html  index.html  objects.inv
