[tool.poetry]
name = "assignments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
dash = "^2.1.0"
dash-bootstrap-components = "^1.0.3"
Sphinx = "^4.4.0"
mkdocs = "^1.2.3"
mkdocstrings = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
jupyterlab = "^3.2.9"
ipython = "^8.0.1"
grip = "^4.6.0"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]